[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mockyard"
version = "0.1.0"
description = "mock your microservice dependencies locally"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
    "faker>=22.0.0",
    "jsonschema>=4.21.0",
    "pyyaml>=6.0.0",
    "watchfiles>=0.21.0",
]

[project.scripts]
mockyard = "mockyard.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["mockyard"]
